--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/css/common.css=EUC-KR
 encoding//src/main/webapp/css/left.css=EUC-KR
+encoding//src/main/webapp/javascript/calendar.js=EUC-KR
 encoding//src/main/webapp/javascript/left.js=EUC-KR
 encoding/<project>=x-windows-949
