--- a/src/main/resources/config/file.properties
+++ b/src/main/resources/config/file.properties
@@ -1,3 +1,3 @@
 ## FileName : file.properties
 
-uploadDir=/src/main/webapp//images/uploadFiles/
+uploadDir=F:/BitCamp/workspace/09.Model2MVCShop(jQuery)/src/main/webapp/images/uploadFiles/
