New : updateProduct, addProduct, getProduct 병합 및 js 적용
09.26.목
동일한 jsp 병합진행중,
updateProduct void로 변경 (@ModelAttribute로 바인딩 받은 product가 결국 업데이트 후의
product와 동일하기 때문)

* 기존에 설명한 내용 틀렸음 참조 값이 아님 별개의 객체라서 다시 Model에 실어줘야한다

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,10 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/css/common.css=EUC-KR
 encoding//src/main/webapp/css/left.css=EUC-KR
+encoding//src/main/webapp/javascript/addProductView.js=EUC-KR
 encoding//src/main/webapp/javascript/calendar.js=EUC-KR
+encoding//src/main/webapp/javascript/common.js=EUC-KR
+encoding//src/main/webapp/javascript/getProduct.js=EUC-KR
 encoding//src/main/webapp/javascript/left.js=EUC-KR
+encoding//src/main/webapp/javascript/top.js=EUC-KR
 encoding/<project>=x-windows-949
